--- a/src/less/main.less
+++ b/src/less/main.less
@@ -43,6 +43,9 @@ body {
 .ttransition {
   transition: transform .2s ease-in;
 }
+.transparent {
+  opacity: 0.01;
+}
 .tzoom {
   &:hover {
     transform: scale(1.2);
