disable console in production

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -53,6 +53,10 @@ body {
     transform: scale(1.2);
   }
 }
+.rotate {
+   animation:spin 4s linear infinite;
+}
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 input,button {
   background:transparent;
   border:none;
