--- a/src/less/main.less
+++ b/src/less/main.less
@@ -79,3 +79,7 @@ input,button {
 	background-color: #AAA;
 	border-radius: 10px;
 }
+
+[data-link="#share-whatsapp"] button {
+  background-color: hsl(142, 70%, 49%);
+}
